@@ -37,6 +37,7 @@ Low-level changelog
  - API standards: expand() should exist for all Storage modules. (mg)
  - Add new Generic::Vec storage module, with support for LBSGVXS. (mg)
  - Consolidate generic Storage methods into a Storage base class. (mg)
+ - API standards: add get_dims() to the Storage API. (mg)
 
 3.05 Tue Jan 22 17:52:27 CET 2008
  - LBV now uses an array internally for more efficiency
